# psimon_h7

./: .env.example  .gitignore  LICENSE  README.md  examples.py  frontend.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-publish.yml
core/: psimon_framework.py
models/: algolia_indexer.py  cognitive_engine.py
physics/: chiral_fermionic_system.py  fock_basis.py  isotope_h7_convergence.py  isotopic_beta_fermion_system.py  metriplex_oracle.py
psimon_h7/: frontend.py  main.py
quantum/: simon_improved.py
tests/: test_fock.py  test_framework.py  test_oracle.py  test_simon.py
